management_server_iptables
# Generated by iptables-save v1.4.7 on Mon Sep 24 22:14:50 2018
*nat
:PREROUTING ACCEPT [12:3046]
:POSTROUTING ACCEPT [105:6749]
:OUTPUT ACCEPT [105:6749]
-A POSTROUTING -o eth0 -j MASQUERADE 
COMMIT
# Completed on Mon Sep 24 22:14:50 2018
# Generated by iptables-save v1.4.7 on Mon Sep 24 22:14:50 2018
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -p tcp -m tcp --dport 9090 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 8250 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 8080 -j ACCEPT 
-A INPUT -p udp -m state --state NEW -m udp --dport 111 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 111 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 2049 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 32803 -j ACCEPT 
-A INPUT -p udp -m state --state NEW -m udp --dport 32769 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 892 -j ACCEPT 
-A INPUT -p udp -m state --state NEW -m udp --dport 892 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 875 -j ACCEPT 
-A INPUT -p udp -m state --state NEW -m udp --dport 875 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 662 -j ACCEPT 
-A INPUT -p udp -m state --state NEW -m udp --dport 662 -j ACCEPT 
-A FORWARD -i eth0 -o eth1 -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A FORWARD -i eth1 -o eth0 -j ACCEPT 
COMMIT
# Completed on Mon Sep 24 22:14:50 2018
